# colord-kde

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  ConfigureChecks.cmake  MAINTAINERS  Messages.sh  TODO  config-randr.h.cmake  config.h.cmake  dbus-types.h
calibrate/: Action.qml  CMakeLists.txt  CalibrationQuality.qml  CheckSettings.qml  DisplayType.qml  Introduction.qml  ProfileTitle.qml  SamplesWindow.qml  application.qrc  colordhelper.cpp  colordhelper.h  main.cpp  main.qml
colord-kcm/: AddProfile.cpp  AddProfile.h  AddProfile.ui  CMakeLists.txt  ColordKCM.cpp  ColordKCM.h  ColordKCM.ui  Description.cpp  Description.h  Description.ui  DeviceDescription.cpp  DeviceDescription.h  DeviceModel.cpp  DeviceModel.h  NoSelectionRectDelegate.cpp  NoSelectionRectDelegate.h  Profile.cpp  Profile.h  ProfileDescription.cpp  ProfileDescription.h  ProfileDescription.ui  ProfileMetaData.cpp  ProfileMetaData.h  ProfileMetaData.ui  ProfileMetaDataModel.cpp  ProfileMetaDataModel.h  ProfileModel.cpp  ProfileModel.h  ProfileNamedColors.cpp  ProfileNamedColors.h  ProfileNamedColors.ui  ProfileNamedColorsModel.cpp  ProfileNamedColorsModel.h  kcm_colord.desktop  kcm_colord.json
colord-kcm/package/contents/ui/: ProfileMetaDataView.qml  main.qml
colord-kcm/ui/: ProfileMetaDataView.qml  main.qml
colord-kded/: CMakeLists.txt  ColorD.cpp  ColorD.h  DmiUtils.cpp  DmiUtils.h  Edid.cpp  Edid.h  Output.cpp  Output.h  ProfileUtils.cpp  ProfileUtils.h  ProfilesWatcher.cpp  ProfilesWatcher.h  XEventHandler.cpp  XEventHandler.h  colord.desktop  colord.json  xlibandxrandr.h
colord-tmp-interfaces/: org.freedesktop.ColorHelper.xml
dataengine/: CMakeLists.txt  ColordEngine.cpp  ColordEngine.h  ColordService.cpp  ColordService.h  ColordServiceJob.cpp  ColordServiceJob.h  org.freedesktop.colord.operations  plasma-engine-colord.desktop
debian/: .gitignore  changelog  control  copyright  docs  rules
icc-importer/: CMakeLists.txt  colordkdeiccimporter.desktop  main.cpp
po/ar/: colord-kde.po
po/ast/: colord-kde.po
po/az/: colord-kde.po
po/bg/: colord-kde.po
po/bs/: colord-kde.po
po/ca/: colord-kde.po
po/ca@valencia/: colord-kde.po
po/cs/: colord-kde.po
po/da/: colord-kde.po
po/de/: colord-kde.po
po/el/: colord-kde.po
po/en_GB/: colord-kde.po
po/eo/: colord-kde.po
po/es/: colord-kde.po
po/et/: colord-kde.po
po/eu/: colord-kde.po
po/fi/: colord-kde.po
po/fr/: colord-kde.po
po/ga/: colord-kde.po
po/gl/: colord-kde.po
po/he/: colord-kde.po
po/hi/: colord-kde.po
po/hu/: colord-kde.po
po/ia/: colord-kde.po
po/id/: colord-kde.po
po/is/: colord-kde.po
po/it/: colord-kde.po
po/ja/: colord-kde.po
po/ka/: colord-kde.po
po/km/: colord-kde.po
po/ko/: colord-kde.po
po/lt/: colord-kde.po
po/lv/: colord-kde.po
po/mr/: colord-kde.po
po/nl/: colord-kde.po
po/nn/: colord-kde.po
po/pa/: colord-kde.po
po/pl/: colord-kde.po
po/pt/: colord-kde.po
po/pt_BR/: colord-kde.po
po/ro/: colord-kde.po
po/ru/: colord-kde.po
po/sa/: colord-kde.po
po/sk/: colord-kde.po
po/sl/: colord-kde.po
po/sv/: colord-kde.po
po/ta/: colord-kde.po
po/tr/: colord-kde.po
po/ug/: colord-kde.po
po/uk/: colord-kde.po
po/zh_CN/: colord-kde.po
po/zh_TW/: colord-kde.po
